# RenderEngine2D

./: CMakeLists.txt  LICENSE  README.md  Report.docx
include/: CollisionManager.hpp  Dialogue.hpp  Entity.hpp  Game.hpp  NPC.hpp  Player.hpp  ResourceManager.hpp  TileMap.hpp
src/: CollisionManager.cpp  Dialogue.cpp  Entity.cpp  Game.cpp  Player.cpp  ResourceManager.cpp  TileMap.cpp  main.cpp
